--- a/accueil.html
+++ b/accueil.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titre de la page</title>
+    <link href="images/logoVC.ico" rel="shortcut icon" type="image/x-icon" />
     <!-- Lien vers une feuille de style externe -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <img src = "images/logoVC.jpg"/>
         <h1>Voix Citoyenne</h1>
     </header>
     
