--- a/accueil.html
+++ b/accueil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titre de la page</title>
+    <title>Accueil</title>
     <link href="images/logoVC.ico" rel="shortcut icon" type="image/x-icon" />
     <!-- Lien vers une feuille de style externe -->
     <link rel="stylesheet" href="styles.css">
