--- a/groupe.html
+++ b/groupe.html
@@ -12,6 +12,12 @@
     <header>
         <img src = "images/logoVC.jpg"/>
         <h1>Voix Citoyenne</h1>
+        <nav>
+            <ul>
+                <li><a href="discussion.html">Accueil</a></li>
+                <li><a href="vote.html">À propos</a></li>
+            </ul>
+        </nav>
     </header>
     
     <main>
