--- a/groupe.html
+++ b/groupe.html
@@ -14,6 +14,14 @@
         <h1>Voix Citoyenne</h1>
         <nav>
             <ul>
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="propositions.html">Propositions</a></li>
+                <li><a href="vote.html">Votes</a></li>
+            </ul>
+        </nav>
+        <img src = "images/parametres.png"/>
+        <nav>
+            <ul>
                 <li><a href="discussion.html">Accueil</a></li>
                 <li><a href="vote.html">À propos</a></li>
             </ul>
