--- a/vote.html
+++ b/vote.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vote</title>
+    <title>Groupe</title>
     <link href="images/logoVC.ico" rel="shortcut icon" type="image/x-icon" />
     <!-- Lien vers une feuille de style externe -->
     <link rel="stylesheet" href="styles.css">
@@ -12,6 +12,20 @@
     <header>
         <img src = "images/logoVC.jpg"/>
         <h1>Voix Citoyenne</h1>
+        <nav>
+            <ul>
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="propositions.html">Propositions</a></li>
+                <li><a href="vote.html">Votes</a></li>
+            </ul>
+        </nav>
+        <img src = "images/parametres.png"/>
+        <nav>
+            <ul>
+                <li><a href="discussion.html">Accueil</a></li>
+                <li><a href="vote.html">À propos</a></li>
+            </ul>
+        </nav>
     </header>
     
     <main>
