--- a/groupe.html
+++ b/groupe.html
@@ -20,16 +20,16 @@
             </ul>
         </nav>
         <img src = "images/parametres.png"/>
-        <nav>
-            <ul>
-                <li><a href="discussion.html">Accueil</a></li>
-                <li><a href="vote.html">À propos</a></li>
-            </ul>
-        </nav>
     </header>
     
     <main>
-        <p>Ceci est le contenu principal de la page.</p>
+        <section>
+            <ul>
+                <li><img src = "images/user.png" /><img src = "images/createur.png" />nom prénom 1 (créateur)</li>
+                <li><img src = "images/user.png" />nom prénom 2</li>
+                <li><img src = "images/user.png" />nom prénom 3</li>
+            </ul>
+        </section>
     </main>
     
     <footer>
