--- a/groupe.html
+++ b/groupe.html
@@ -24,20 +24,29 @@
     </header>
     
     <main>
-        <section>
+        <aside>
             <p>Liste des membres</p>
             <ul>
                 <li><img src = "images/user.png" /><img src = "images/createur.png" />nom prénom 1 (créateur)</li>
                 <li><img src = "images/user.png" />nom prénom 2</li>
                 <li><img src = "images/user.png" />nom prénom 3</li>
             </ul>
-        </section>
+        </aside>
         <section>
             <p>Dernières décisions prises</p>
             <ul>
-                <li>vote 1 : décision prise = pour</li>
-                <li>vote 2 : décision prise = contre</li>
-                <li>vote 3 : décision prise = en faveur de Anakin</li>
+                <li>vote 1 : décision prise = pour</li><p>Theme x</p>
+                <li>vote 2 : décision prise = contre</li><p>Theme x</p>
+                <li>vote 3 : décision prise = en faveur de Anakin</li><p>Theme x</p>
+            </ul>
+        </section>
+        <section>
+            <p>Propositions récentes</p>
+            <p>Propositions non résolues dans lesquels vous avez discuté.</p>
+            <ul>
+                <li>vote 1 : décision prise = pour</li><p>Theme x</p>
+                <li>vote 2 : décision prise = contre</li><p>Theme x</p>
+                <li>vote 3 : décision prise = en faveur de Anakin</li><p>Theme x</p>
             </ul>
         </section>
     </main>
