--- a/vote.html
+++ b/vote.html
@@ -24,14 +24,14 @@
     </header>
     
     <main>
-        <section>
+        <aside>
             <p>Liste des membres</p>
             <ul>
                 <li><img src = "images/user.png" /><img src = "images/createur.png" />nom prénom 1 (créateur)</li>
                 <li><img src = "images/user.png" />nom prénom 2</li>
                 <li><img src = "images/user.png" />nom prénom 3</li>
             </ul>
-        </section>
+        </aside>
         <section>
             <p>Dernières décisions prises</p>
             <ul>
