--- a/groupe.html
+++ b/groupe.html
@@ -12,7 +12,7 @@
     <header>
         <img src = "images/logoVC.jpg"/>
         <h1>Nom du groupe (mettre l'image du groupe en question à la place)</h1>
-        <img src = "images/logoVC.ico">
+        <a href="#"><img src = "images/logoVC.ico"></a>
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
@@ -41,12 +41,12 @@
             </ul>
         </section>
         <section>
-            <p>Propositions récentes</p>
-            <p>Propositions non résolues dans lesquels vous avez discuté.</p>
+            <p>Propositions récentes*</p>
+            <p><i>*Propositions non résolues dans lesquels vous avez participé.</i></p>
             <ul>
-                <li>vote 1 : décision prise = pour</li><p>Theme x</p>
-                <li>vote 2 : décision prise = contre</li><p>Theme x</p>
-                <li>vote 3 : décision prise = en faveur de Anakin</li><p>Theme x</p>
+                <li>proposition sur nananana</li><p>Theme x</p>
+                <li>proposition sur nananana</li><p>Theme x</p>
+                <li>proposition sur nananana</li><p>Theme x</p>
             </ul>
         </section>
     </main>
