--- a/vote.html
+++ b/vote.html
@@ -12,7 +12,7 @@
     <header>
         <img src = "images/logoVC.jpg"/>
         <h1>Nom du groupe (mettre l'image du groupe en question à la place)</h1>
-        <img src = "images/logoVC.ico">
+        <a href="groupe.html"><img src = "images/logoVC.ico"></a>
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
