--- a/vue/accueil.html
+++ b/vue/accueil.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
-    <link href="images/logoVC.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="../images/logoVC.ico" rel="shortcut icon" type="image/x-icon" />
     <!-- Lien vers une feuille de style externe -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <img src = "images/logoVC.jpg"/>
+        <img src = "../images/logoVC.jpg"/>
         <h1>Voix Citoyenne</h1>
-        <img src = "images/parametres.png"/>
+        <img src = "../images/parametres.png"/>
     </header>
     
     <main>
@@ -21,11 +21,11 @@
         <h3>Liste de vos groupes :</h3>
         <ul>
             <li>Groupe 1</li>
-            <img src = "images/logoVC.jpg"/>
+            <img src = "../images/logoVC.jpg"/>
             <li>Groupe 2</li>
-            <img src = "images/logoVC.jpg"/>
+            <img src = "../images/logoVC.jpg"/>
             <li>Groupe 3</li>
-            <img src = "images/logoVC.jpg"/>
+            <img src = "../images/logoVC.jpg"/>
         </ul>
         <p>Créer un groupe ici</p>
         </section>
@@ -38,7 +38,7 @@
             </ul>
         </section>
         <section>
-            <img src = "images/ajouter.png" />
+            <img src = "../images/ajouter.png" />
             <p>Créer un groupe</p>
         </section>
     </main>
