--- a/vue/discussion.html
+++ b/vue/discussion.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groupe</title>
-    <link href="images/logoVC.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="../images/logoVC.ico" rel="shortcut icon" type="image/x-icon" />
     <!-- Lien vers une feuille de style externe -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <img src = "images/logoVC.jpg"/>
+        <img src = "../images/logoVC.jpg"/>
         <h1>Nom du groupe (mettre l'image du groupe en question à la place)</h1>
-        <a href="groupe.html"><img src = "images/logoVC.ico"></a>
+        <a href="../groupe.html"><img src = "../images/logoVC.ico"></a>
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
@@ -20,16 +20,16 @@
                 <li><a href="vote.html">Votes</a></li>
             </ul>
         </nav>
-        <img src = "images/parametres.png"/>
+        <img src = "../images/parametres.png"/>
     </header>
     
     <main>
         <aside>
             <p>Liste des membres</p>
             <ul>
-                <li><img src = "images/user.png" /><img src = "images/createur.png" />nom prénom 1 (créateur)</li>
-                <li><img src = "images/user.png" />nom prénom 2</li>
-                <li><img src = "images/user.png" />nom prénom 3</li>
+                <li><img src = "../images/user.png" /><img src = "../images/createur.png" />nom prénom 1 (créateur)</li>
+                <li><img src = "../images/user.png" />nom prénom 2</li>
+                <li><img src = "../images/user.png" />nom prénom 3</li>
             </ul>
         </aside>
         <section>
