--- a/vue/liste_vote.html
+++ b/vue/liste_vote.html
@@ -20,7 +20,7 @@
                 <li><a href="vote.html">Votes</a></li>
             </ul>
         </nav>
-        <img src = "images/parametres.png"/>
+        <img src = "../images/parametres.png"/>
     </header>
     
     <main>
