--- a/vue/connexion.html
+++ b/vue/connexion.html
@@ -12,7 +12,7 @@
 	<h1>Voix</h1>
 	<h1>Citoyenne</h1>
 	<h4><i>Chaque voix compte</i></h4>
-    <form action="/controllers/connexion.php" method="POST"></form>
+    <form action="../controllers/controleurconnexion.php" method="POST"></form>
         <label for="email"></label>
         <input type="email" id="email" name="email" placeholder="Adresse e-mail" required>
         <br>
