--- a/vue/creacompte.html
+++ b/vue/creacompte.html
@@ -3,46 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Créer vous un compte</title>
-    <!-- Lien vers une feuille de style externe -->
+    <title>Créer votre compte</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
-	<h1>Voix Citoyenne</h1>
-	<h4><i>Chaque voix compte</i></h4>
-        <form>
-				<label for="prenom"></label>
-				<input type="prenom" id="prenom" name="prenom" placeholder="Prénom" required>
-				<br>
-				<label for="nom"></label>
-				<input type="nom" id="nom" name="nom" placeholder="Nom" required>
-				<br>
-				<label for="email"></label>
-				<input type="email" id="email" name="email" placeholder="Adresse e-mail" required>
-				<br>
-				<label for="password"></label>
-				<input type="password" id="password" name="password" placeholder="Mot de passe" required>
-				<br>
-				<label for="code postal"></label>
-				<input type="code postal" id="code postal" name="code postal" placeholder="Code postal" required>
-				<br>
-				<label for="ville"></label>
-				<input type="ville" id="ville" name="ville" placeholder="Ville" required>
-				<br>
-				<label for="numéro de rue"></label>
-				<input type="numéro de rue" id="numéro de rue" name="numéro de rue" placeholder="Numéro de rue" required>
-				<label for="nom de la rue"></label>
-				<input type="nom de la rue" id="nom de la rue" name="nom de la rue" placeholder="Nom de la rue" required>
-				<br>
-				<button type="submit">Créer le compte</button>
-		</form>
-    
+        <h1>Voix Citoyenne</h1>
+        <h4><i>Chaque voix compte</i></h4>
+        <form action="../controllers/controleurCreaCompte.php" method="POST">
+            <label for="prenom"></label>
+            <input type="text" id="prenom" name="prenom" placeholder="Prénom" required>
+            <br>
+            <label for="nom"></label>
+            <input type="text" id="nom" name="nom" placeholder="Nom" required>
+            <br>
+            <label for="email"></label>
+            <input type="email" id="email" name="email" placeholder="Adresse e-mail" required>
+            <br>
+            <label for="password"></label>
+            <input type="password" id="password" name="password" placeholder="Mot de passe" required>
+            <br>
+            <label for="code_postal"></label>
+            <input type="text" id="code_postal" name="code_postal" placeholder="Code postal" required>
+            <br>
+            <label for="ville"></label>
+            <input type="text" id="ville" name="ville" placeholder="Ville" required>
+            <br>
+            <label for="numero_rue"></label>
+            <input type="text" id="numero_rue" name="numero_rue" placeholder="Numéro de rue" required>
+            <br>
+            <label for="nom_rue"></label>
+            <input type="text" id="nom_rue" name="nom_rue" placeholder="Nom de la rue" required>
+            <br>
+            <button type="submit">Créer le compte</button>
+        </form>
+    </main>
     <footer>
         <p>© 2024 Voix Citoyenne. Tous droits réservés.</p>
     </footer>
-    
-    <!-- Lien vers un fichier JavaScript -->
-    <script src="script.js"></script>
 </body>
 </html>
