ajout des majs sur logout, accueil et creacompte

--- a/vue/creacompte.html
+++ b/vue/creacompte.html
@@ -36,6 +36,9 @@
             <input type="text" id="nom_rue" name="nom_rue" placeholder="Nom de la rue" required>
             <br>
             <button type="submit">Créer le compte</button>
+
+            <p>Vous avez un compte ? <a href="connexion.html">Connectez-vous</a></p>
+
         </form>
     </main>
     <footer>
