--- a/vue/connexion.html
+++ b/vue/connexion.html
@@ -9,8 +9,7 @@
 </head> 
 <body>
     <main>
-	<h1>Voix</h1>
-	<h1>Citoyenne</h1>
+	<h1>Voix Citoyenne</h1>
 	<h4><i>Chaque voix compte</i></h4>
     <form action="../controllers/controleurconnexion.php" method="POST">
         <label for="email"></label>
@@ -21,7 +20,7 @@
         <br>
         <button type="submit">Connexion</button>
     </form>
-		<a href="creacompte.html"><p>Créer un compte</p></a>
+		<a href="/saes3-ese/projetSAES3/vue/creacompte.html"><p>Créer un compte</p></a>
     </main>
     
     <footer>
