--- a/vue/creacompte.html
+++ b/vue/creacompte.html
@@ -24,20 +24,20 @@
             <input type="password" id="password" name="password" placeholder="Mot de passe" required>
             <br>
             <label for="code_postal"></label>
-            <input type="text" id="code_postal" name="code_postal" placeholder="Code postal" required>
+            <input type="number" id="code_postal" name="code_postal" placeholder="Code postal" required>
             <br>
             <label for="ville"></label>
             <input type="text" id="ville" name="ville" placeholder="Ville" required>
             <br>
             <label for="numero_rue"></label>
-            <input type="text" id="numero_rue" name="numero_rue" placeholder="Numéro de rue" required>
+            <input type="number" id="numero_rue" name="numero_rue" placeholder="Numéro de rue" required>
             <br>
             <label for="nom_rue"></label>
             <input type="text" id="nom_rue" name="nom_rue" placeholder="Nom de la rue" required>
             <br>
             <button type="submit">Créer le compte</button>
 
-            <p>Vous avez un compte ? <a href="connexion.html">Connectez-vous</a></p>
+            <p>Vous avez un compte ? <a href="/saes3-ese/projetSAES3/vue/connexion.html">Connectez-vous</a></p>
 
         </form>
     </main>
