--- a/vue/liste_prop.html
+++ b/vue/liste_prop.html
@@ -33,11 +33,11 @@
             </ul>
         </aside>
         <section>
-            <p>Dernières décisions prises</p>
+            <p>Toutes les propositions :</p>
             <ul>
-                <li>vote 1 : décision prise = pour</li>
-                <li>vote 2 : décision prise = contre</li>
-                <li>vote 3 : décision prise = en faveur de Anakin</li>
+                <li>Proposition 1</li>
+                <li>Proposition 2</li>
+                <li>Proposition 3</li>
             </ul>
         </section>
     </main>
