--- a/vue/liste_vote.html
+++ b/vue/liste_vote.html
@@ -33,11 +33,11 @@
             </ul>
         </aside>
         <section>
-            <p>Dernières décisions prises</p>
+            <p>Tous les votes en cours :</p>
             <ul>
-                <li>vote 1 : décision prise = pour</li>
-                <li>vote 2 : décision prise = contre</li>
-                <li>vote 3 : décision prise = en faveur de Anakin</li>
+                <li><a href="vote.html">vote 1</a></li><img src = "../images/info.png" />  <!--Quand le bouton est cliqué, ça affiche la description du vote-->
+                <li><a href="vote.html">vote 2</a></li><img src = "../images/info.png" />
+                <li><a href="vote.html">vote 3</a></li><img src = "../images/info.png" />
             </ul>
         </section>
     </main>
