ajout des controleurs et modification creagroupe

--- a/vue/creagroupe.html
+++ b/vue/creagroupe.html
@@ -20,7 +20,7 @@
         <section>
             <form action="../controllers/controleurCreaTheme.php" method="POST">
                 <label for="nom du theme"></label>
-                <input type="text" id="nom" name="nom du theme" placeholder="nom du theme" required>
+                <input type="text" id="nom_du_theme" name="nom du theme" placeholder="nom du theme" required>
                 <br>
                 <label for="limite_theme"></label>
                 <input type="number" id="limite_theme" name="limite_theme" placeholder="Limite du theme pour une proposition" required>
