maj vote et discussion

--- a/vue/discussion.html
+++ b/vue/discussion.html
@@ -33,12 +33,17 @@
             </ul>
         </aside>
         <section>
-            <p>Dernières décisions prises</p>
-            <ul>
-                <li>vote 1 : décision prise = pour</li>
-                <li>vote 2 : décision prise = contre</li>
-                <li>vote 3 : décision prise = en faveur de Anakin</li>
-            </ul>
+            <img src="../images/user.png" /><p>Alexandra Lamy</p>
+            <p>Je suis d'accord avec cette proposition !</p>
+            <p>00h00</p>
+            <img src="../images/signaler.png" /><p>signaler</p>
+            <p>1</p><img src="../images/poucehaut2.png" /><p>0</p><img src="../images/poucebas.png" />
+            <br>
+            <img src="../images/user.png" /><p>Vous</p>
+            <p>Pas moi</p>
+            <p>00h12</p>
+            <img src="../images/signaler.png" /><p>signaler</p>
+            <p>0</p><img src="../images/poucehaut.png" /><p>0</p><img src="../images/poucebas.png" />
         </section>
     </main>
     
