--- a/vue/vote.html
+++ b/vue/vote.html
@@ -35,11 +35,11 @@
         <section>
             <p>Vote X</p>
             <form action="../controllers/controleurvote.php" method="POST">
-                <label for="choix1"></label>
-                <input type="radio" id="choix1" name="choix1" placeholder="choix1">
+                <label for="choix1">choix 1</label>
+                <input type="radio" id="choix1" name="choix_vote" placeholder="choix1" required>
                 <br>
-                <label for="choix2"></label>
-                <input type="radio" id="choix2" name="choix2" placeholder="choix2">
+                <label for="choix2">choix 2</label>
+                <input type="radio" id="choix2" name="choix_vote" placeholder="choix2" required>
                 <br>
                 <button type="submit">Voter</button>
             </form>
