--- a/vue/connexion.html
+++ b/vue/connexion.html
@@ -3,30 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>connexion</title>
+    <title>Connexion</title>
     <!-- Lien vers une feuille de style externe -->
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="../styles/connexionCompte.css">
 </head> 
 <body>
+    <header>
+        <img src="../images/logoVC.jpg" alt="Logo" />
+        <h1>Voix Citoyenne</h1>
+    </header>
+
     <main>
-	<h1>Voix Citoyenne</h1>
-	<h4><i>Chaque voix compte</i></h4>
-    <form action="../controllers/controleurconnexion.php" method="POST">
-        <label for="email"></label>
-        <input type="email" id="email" name="email" placeholder="Adresse e-mail" required>
-        <br>
-        <label for="password"></label>
-        <input type="password" id="password" name="password" placeholder="Mot de passe" required>
-        <br>
-        <button type="submit">Connexion</button>
-    </form>
-		<a href="/saes3-ese/projetSAES3/vue/creacompte.html"><p>Créer un compte</p></a>
+        <h4><i>Chaque voix compte</i></h4>
+        <form action="../controllers/controleurconnexion.php" method="POST">
+            <div class="form-group">
+                <input type="email" id="email" name="email" placeholder="Adresse e-mail" required>
+            </div>
+            <div class="form-group">
+                <input type="password" id="password" name="password" placeholder="Mot de passe" required>
+            </div>
+            <button type="submit">Connexion</button>
+        </form>
+        <p class="register-link">Vous n'avez pas de compte ? <a href="/saes3-ese/projetSAES3/vue/creacompte.html">Créez-en un</a></p>
     </main>
-    
+
     <footer>
         <p>© 2024 Voix Citoyenne. Tous droits réservés.</p>
     </footer>
-    
+
     <!-- Lien vers un fichier JavaScript -->
     <script src="script.js"></script>
 </body>
