--- a/vue/accueil.html
+++ b/vue/accueil.html
@@ -2,6 +2,7 @@
 session_start();
 require_once("../config/connexion.php");
 require_once("../modele/groupe.php");
+require_once("../modele/membre.php");
 
 // Vérifie si l'utilisateur est connecté
 if (!isset($_SESSION['prenom']) || !isset($_SESSION['nom'])) {
@@ -54,20 +55,31 @@ $id = htmlspecialchars($_SESSION['id']);
             <ul>
                 <?php
                 Connexion::connect();
-                $grp = Groupe::getGroupeById($id);
+                $myGrp = Groupe::getGroupeById($id);
+                $grp = Membre::getGrpById($id);
                 
+                // La liste de groupe dont il est propriétaire
+                if (!empty($myGrp)) {
+                    foreach ($myGrp as $listGrp) {
+                        echo '<li>' . $listGrp->get('grp_nom') .'  '. '<img src="' . $listGrp->get('grp_img') . '" alt="Logo ' . $listGrp->get('grp_nom') . '"class="image-small" /></li>';
+                    }
+                } 
+                // La liste groupe en étant membre ou modérateur
                 if (!empty($grp)) {
                     foreach ($grp as $listGrp) {
                         echo '<li>' . $listGrp->get('grp_nom') .'  '. '<img src="' . $listGrp->get('grp_img') . '" alt="Logo ' . $listGrp->get('grp_nom') . '"class="image-small" /></li>';
                     }
-                } else {
-                    echo 'Aucun groupe trouvé.';
+                } 
+
+                // Si on a aucun groupe on affiche qu'il en a pas
+                if (empty($myGrp)&&empty($grp)) {
+                echo 'Aucun groupe trouvé.';
                 }
 
                 ?>
             </ul>
             <a href="creagroupe.php">
-                <p>Créer un groupe : </p>
+                <b><p>Créer un groupe : </p></b>
                 <img src="../images/ajouter.png" alt="Créer un groupe" />
             </a>    
 
