Remove menu.html and update redirection from connexion.html to connexion.php in multiple files

--- a/vue/creacompte.html
+++ b/vue/creacompte.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <h4><i>Chaque voix compte</i></h4>
+        <h2><b>Création du compte</b></h2>
         <form action="../controllers/controleurCreaCompte.php" method="POST">
             <div class="form-group">
                 <input type="text" id="prenom" name="prenom" placeholder="Prénom" required>
@@ -42,7 +42,7 @@
                 <input type="text" id="nom_rue" name="nom_rue" placeholder="Nom de la rue" required>
             </div>
             <button type="submit">Créer le compte</button>
-            <p>Vous avez un compte ? <a href="/saes3-ese/projetSAES3/vue/connexion.html">Connectez-vous</a></p>
+            <p>Vous avez un compte ? <a href="/saes3-ese/projetSAES3/vue/connexion.php"><b>Connectez-vous</a></b></a></p>
         </form>
     </main>
 
