--- a/vue/discussion.html
+++ b/vue/discussion.html
@@ -6,7 +6,7 @@
     <title>Discussion</title>
     <link href="../images/logoVC.ico" rel="shortcut icon" type="image/x-icon" />
     <!-- Lien vers une feuille de style externe -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/discussion.css">
 </head>
 <body>
     <header>
